--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ div.wpforms-container-full form.wpforms-form select {
 				<div class="elementor-element elementor-element-187073d elementor-align-center elementor-widget elementor-widget-button" data-id="187073d" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://t.me/freesharkaoo" class="bt1 atrasado" role="button">
+			<a href="https://t.me/freesharkaoo" class="elementor-button-link elementor-button elementor-size-xl" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-telegram-plane"></i>			</span>
@@ -184,7 +184,7 @@ div.wpforms-container-full form.wpforms-form select {
 				<div class="elementor-element elementor-element-8840066 elementor-align-center elementor-widget elementor-widget-button" data-id="8840066" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://t.me/freesharkaoo" class="bt1 atrasado" role="button">
+			<a href="https://t.me/freesharkaoo" class="elementor-button-link elementor-button elementor-size-xl" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fab fa-telegram-plane"></i>			</span>
